--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#df5b2b" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Bywear - lit clothing"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Bywear</title>
